--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Knowledge Computing Lab of Tongji University
-title_en: Knowledge Computing Lab of Tongji University
+title: Knowledge Computing Lab 
+title_en: Knowledge Computing Lab 
 email: haofen.want@tongji.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
   Tongji University Knowledge Graph and Large Language Model Lab is dedicated to cutting-edge research in AI and NLP.
