--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Knowledge Computing Lab 
 title_en: Knowledge Computing Lab 
-email: haofen.want@tongji.edu.cn
+email: haofen.wang@tongji.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
   Tongji University Knowledge Graph and Large Language Model Lab is dedicated to cutting-edge research in AI and NLP.
 description_en: >- # this means to ignore newlines until "baseurl:"
