--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ title: Knowledge Computing Lab
 title_en: Knowledge Computing Lab 
 email: haofen.wang@tongji.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
-  Knowledge Computing Lab at Tongji University is dedicated to the synergies of KG and LLM
+  Knowledge Computing Lab of Tongji University is dedicated to the synergies of KG and LLM
 description_en: >- # this means to ignore newlines until "baseurl:"
-  Knowledge Computing Lab at Tongji University is dedicated to the synergies of KG and LLM
+  Knowledge Computing Lab of Tongji University is dedicated to the synergies of KG and LLM
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kgllm.tongji.edu.cn" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: tongji-kgllm
